[tool.poetry]
name = "garagem_gabb_3i2"
version = "0.1.0"
description = "Garagem 3info2 Gabriel da Maia"
authors = ["Gabb <gabbmaia2004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
